--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,24 @@ input[type=number] {
 .clue-card-content{
   max-height: 100px;
 }
+
+textarea { 
+  border-style: none; 
+  border-color: Transparent; 
+  overflow: auto;      
+}
+
+textarea:focus {
+  outline: none !important;
+  border-color: Transparent; 
+  overflow: auto;   
+}
+
+.case-description {
+  width:100%;
+  min-height:30em;
+  height:40em;
+  max-height:70em;
+  overflow: visible;
+  font-size: 14px;
+}
